# rocky-bastard

./: README.md
ansible/: rock.yml  rock_builder.yml
ansible/files/: monolith.service  motd
fms/: Cargo.toml
fms/src/: main.rs
genpkcs12/: Cargo.toml
genpkcs12/src/: main.rs
initial_confige/: fips1.sh
monolith_template/: Cargo.toml
monolith_template/src/: backend.rs  frontend.rs  main.rs
monolith_template/src/backend/: yourbackend.rs
scripts/: initial_fips_mode.sh  rock2.sh  rock3.sh  rock_builder.sh
scripts/files/: audit.rules  extended.rules  fim.sh  fimsys.sh  grub  monolith.service  pki_env  port_changer.sh  ref_boot.txt  sshd_config  sysctl.conf
tf/: main.tf  outputs.tf  provider.tf
