[package]
name = "monolith_template"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-lc-fips-sys = "0.12"
rustls = { version = "*", features = ["fips"] }
env_logger = "0.9"
log = "0.4.17"
serde = "1.0.147"
serde_derive = "1.0.147"
docopt = "1.1.1"
chrono = "0.4"
uuid = { version = "0.4", features = ["serde", "v4"] }
toml = "0.8.14"
